# open_ai_rust

./: Cargo.toml  README.md
src/: lib.rs
src/logoi/: message.rs  mod.rs  models.rs
src/logoi/input/: mod.rs  payload.rs  tool.rs
src/logoi/input/payload/: builder.rs  mod.rs  templates.rs
src/logoi/input/tool/: mod.rs  serialise.rs
src/logoi/input/tool/raw_macro/: fn_macro.rs  mod.rs  struct_macro.rs
src/logoi/input/tool/serialise/: insert_param.rs  insert_type.rs  mod.rs  parse_fn.rs  parse_obj.rs  parse_param.rs  parse_type.rs
src/logoi/output/: mod.rs
src/requests/: mod.rs
tests/: ai_msg_res_to_json_tests.rs  function_calling.rs  macro_to_fn_call.rs  parsing_tool_call_res.rs  standard_msg.rs  struct_macro_parsing.rs  tool_call_input_parsing.rs
