[package]
name = "open_ai_rust"
version = "0.2.3"
edition = "2021"
authors = ["Lachy Hislop <lachie.hislop@gmail.com>"]
description = "Open AI SDK for Rust. To my knowledge, the only fully comprehensive and up-to-date Open AI crate built in and for Rust. Provides both low-level control with high level ergonomics for doing cool things (the whole reason we use Rust in the first place). Is maintained and has been used and tested in products used in production."
license = "Apache-2.0"
repository = "https://github.com/Lenard-0/open_ai_rust"
homepage = "https://github.com/Lenard-0/open_ai_rust"
documentation = "https://docs.rs/open_ai_rust"
keywords = ["OpenAI", "API", "Rust", "library", "SDK"]
categories = ["api-bindings", "web-programming"]

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json", "multipart", "stream"] }
dotenv = "0.15"
open_ai_rust_fn_call_extension="0.2.16"

[lib]
name = "open_ai_rust"
path = "src/lib.rs"
